--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,101 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container {
+  background-color: aqua;
+  width: 40%;
+  border-radius: 6px;
+  margin: auto;
+  min-height: 100px;
+  border: 1px solid rgb(255, 255, 255);
+background: transparent;}
+body
+{
+  background-image: url(https://img.freepik.com/premium-photo/abstract-circular-red-background_8466-2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.list-item {
+  display: flex;
+  margin-left: 0;
+  padding: 10px 0;
+
+  
+}
+
+input{
+  padding: 10px;
+  border: 2px solid firebrick;
+  border-radius: 10px;
+  width: 69%;
+  margin-top: 10px;
+  margin-left: 39px;
+}
+.add-btn{
+  background-color: forestgreen;
+  color: white;
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+  font-size: 15px;
+  margin-left: 10px;
+}
+
+
+.list-items {
+  width: 100%;
+  overflow: auto;
+  height: 100%;
+ 
+
+}
+
+.list-item span {
+  display: inline-block;
+background-color: azure;
+  flex-grow: 1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  padding: 10px;
+  border-radius: 5px;
+  padding-bottom: 2px;
+  font-size: 17px;
+  border-bottom: 2px solid rgb(255, 255, 255);
+}
+
+.remove-button {
+  margin-right: 30px;
+  margin-top: -10px;
+  background-color: rgb(255, 60, 0);
+  color: white;
+  padding: 6px;
+  border: 1px solid white;
+  border-radius: 15px;
+  margin-left: 10px;
+  font-size: 15px;
+
+}
+::placeholder{
+  color: rgb(55, 0, 255);
+}
+@media(max-width:375px){
+  .container
+  {
+    width: 100%;
+    border-radius:0px;
+    border: none;
+    
+  }
+  body{
+    margin: 0px;
+    padding: 0px;
+    background: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(https://img.freepik.com/premium-photo/abstract-circular-red-background_8466-2.jpg);
+  }
+  input{
+    width: 53%;
+    font-size: large;
+    color: red;
+  }
 }
